# Regular-Decision-Processes

./: README.md  _config.yml  index.md  requirements.txt
assets/css/: style.scss
environments/: README.md
environments/nonmarkov_envs/: discrete_env.py
environments/nonmarkov_envs/specs/: enemy_corridor.py  gradient_grid.py  malfunction_mab.py
nonmarkov-envs/: pyproject.toml
nonmarkov-envs/nonmarkov_envs/: S3M.py  Source.gv  __main__.py  mcts.py  mcts_node.py  mcts_s3m.py  mealy_machine.py  prova.txt.dat.ff.final.dot  prova.txt.dat.ff.final.dot.json  prova.txt.dat.ff.init_dfa.dot  prova.txt.dat.ff.init_dfa.dot.json  rdp_env.py  refinements.json  test.dot  utils.py
nonmarkov-envs/nonmarkov_envs/specs/: cheat_mab.py  driving_agent.py  malfunction_mab.py  reward_path.py  rotating_mab.py  rotating_maze.py
