[tool.poetry]
name = "nonmarkov-envs"
version = "0.2.3"
description = "A collection of non-Markovian environments and RDPs"
authors = [
	"Gabriel Paludo Licks <licks@diag.uniroma1.it>",
	"Marco Favorito <favorito@diag.uniroma1.it>",
	"Whitemech group <whitemech@diag.uniroma1.it>"
]

[tool.poetry.dependencies]
python = "^3.7"
graphviz = "^0.16"
gym = "^0.18.0"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"
pytest = "^6.2.3"
mypy = "^0.812"
isort = "^5.8.0"
black = "^20.8b1"
jedi = "^0.18.0"
flake8 = "^3.9.0"
tox = "^3.23.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
